--- a/Assignments/TSA_A01_Sp21.Rmd
+++ b/Assignments/TSA_A01_Sp21.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2022"
 subtitle: "Assignment 1 - Due date 01/14/22"
-author: "Student Name"
+author: "Yu Hai"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -19,12 +19,12 @@ When you have completed the assignment, **Knit** the text and code into a single
 
 Q1. What are your previous experiences with time series analysis, R, and Git? 
 
-> Answer: 
+> Answer: I had an a class (Applied Data Analysis for Environmental Social Science) last semester, in which we used R to clean data, plot grpahs, and run OLS models. I used GitHub in energy modeling class, and I have no previous experiences with time series analysis. 
 
 
 Q2. Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository and that you have updated your course README file as instructed on the recorded video "Getting started with Git and Github". 
 
-> Answer: 
+> Answer: https://github.com/yh313/ENV790_TimeSeriesAnalysis_Sp2022.git
 
 
 Q3. For this part we just want to see the path to your R project. No need to do anything. The output will be automatically generated once you knit you file. 
