--- a/Lessons/03_Lesson_ImportData_ACF_PACF.Rmd
+++ b/Lessons/03_Lesson_ImportData_ACF_PACF.Rmd
@@ -3,6 +3,8 @@ title: "Import Data - ACF - PACF"
 author: "Luana Lima"
 date: "1/19/2022"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ## Setting R code chunk options
@@ -31,15 +33,26 @@ For this first example we will import water inflow data for reservoirs in Brazil
 * *header =* : if your file has a header you should set this to TRUE, o.w. FALSE;
 * *skip =* : if your file has rows explaining the data or any other rows on the top that need to be skipped you should just set skip to be equal to the number of row that should be skipped before reading the data. Mote that if header=TRUE, you should not skip the row with the header. The defaul is *skip=0*;
 * *dec =* : define *dec="."* or *dec=","* depending on how it's defined on your set. The default is ".".
+```{r}
+getwd()
+```
+```{r}
+#adv of relative path: if from other's file can still open it
+raw_inflow_data<-read.table(file="./Data/inflowtimeseries.txt.",head=FALSE,skip=0)
+```
 
 ```{r}
 #Importing time series data from text file
 #I am calling it raw for now because it's data as it is in the file
-raw_inflow_data <- read.table(file="/Users/lmm89/OneDrive/Duke_University/9_Spring2022/ENV790_TSA/Git_Repo/ENV790_TimeSeriesAnalysis_Sp2022_v2/Data/inflowtimeseries.txt",header=FALSE,skip=0)
 
+raw_inflow_data <- read.table(file="C:/Users/lenovo/Desktop/Spring_2022/ENV790/ENV790_TimeSeriesAnalysis_Sp2022/Data/inflowtimeseries.txt.",header=FALSE, skip=0)
+
+
+#read.table(file=../)
 #If you want specific columns just trim the table
 raw_inflow_data <- raw_inflow_data[,1:5] #the space before the comma means you want all rows
-                                 #and 1:5 means all columns from 1 to 5
+
+#and 1:5 means all columns from 1 to 5
 nhydro <- ncol(raw_inflow_data)-2
 nobs <- nrow(raw_inflow_data) 
 
@@ -56,13 +69,19 @@ The data sets we will work with will be index by time, remember we are doing TIM
 
 ```{r}
 #using package lubridate
+#mdy(month-date-year)
 my_date <- paste(raw_inflow_data[,1],raw_inflow_data[,2],sep="-")
 my_date <- my(my_date)  #function my from package lubridate
 head(my_date)
 #add that to inflow_data 
 inflow_data <- cbind(my_date,raw_inflow_data[,3:5])
 head(inflow_data)
+```
 
+```{r}
+format(my_date[1],format="%y-%m")
+format(my_date[1],format="%Y-%m")#want four digits for year
+format(my_date[1],format="%Y-%b")
 ```
 
 ## Initial plots
@@ -118,6 +137,7 @@ ggplot(inflow_data, aes(x=my_date, y=HP1)) +
             geom_line(color="blue")
 
 #adding two time series to the same plot
+#can enter all the command so don't need to console instead of inline
 ggplot(inflow_data, aes(x=my_date, y=Inflow)) +
             geom_line(aes(y=HP1,col="HP1")) +
             geom_line(aes(y=HP2,col="HP2")) +
@@ -131,6 +151,7 @@ Many of the functions we will use require a time series object. You can transfor
 ```{r}
 ts_inflow_data <- ts(inflow_data[,2:(2+nhydro-1)]) #note that we are only transforming columns with inflow data, not the date columns
 ts_inflow_data
+plot(ts_inflow_data[,1])
 ```
 
 Note that ts_inflow_data has information on start, end and frequency. We will discuss frequency in future lectures, for now let's just keep the default value for frequency which is 1.
